# climate-challenge-week0

./: .gitignore  .gitkeep  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ci.yml 
app/: __init__.py  main.py  utils.py
notebooks/: README.md  __init__.py  compare_countries.ipynb  ethiopia_eda.ipynb  kenya_eda.ipynb  nigeria_eda.ipynb  sudan_eda.ipynb  tanzania_eda.ipynb
scripts/: README.md  __init__.py  prepare_data.py
src/: __init__.py  cleaning.py  data_loader.py  eda_utils.py  visualization.py
tests/: __init__.py  test_cleaning.py  test_data_loader.py
